update comments in all functions

--- a/wfprogression_package_info.Rmd
+++ b/wfprogression_package_info.Rmd
@@ -190,10 +190,19 @@ dat.scans.sf <- fire_search_scans(fire_bbox=dat.bbox,
                   start_date=datestart,
                   end_date="2023-12-20")
 
+mapview::mapview(dat.scans.sf,col.regions="s3name")
+```
+
+
+
+
+```{r}
 dat.scans.sf <- dat.scans.sf %>% 
   head() %>% 
   dplyr::mutate(ras=purrr::map(s3path,terra::rast))
 ```
+
+
 
 ```{r}
 dat.progs.sf <- fire_search_progs(fire_bbox=dat.bbox, start_date=datestart,  end_date="2023-12-20")
